* May 18, 2010, Kaj de Vos *

Added XZ-Utils.

* March 23, 2010, Kaj de Vos *

Moved all symlink pools from "indexes/" to "index/". This makes paths throughout the system
a bit shorter.

There's a compatibility symlink from resources/indexes/ to resources/index/ so that old
packages that have this path built in can still be used on new systems.
The Syllable branch in Builder/packages/ has not been changed yet, so that some packages
can still be built on older systems.

* March 6, 2010, Kaj de Vos *

Did a massive further restructuring of the subdirectories in resource packages in the past
few weeks.

Moved bin/ to programs/.
Most common people would probably associate "bin" with a dustbin, and wonder why every
package has its own trashcan. We'd have to explain that it means "binaries", then explain
what binaries are and what a binary number system is, and then explain that bin/ directories
don't just contain binaries, and that binaries can also be found elsewhere... bin/ has only
been a fitting name for a short period in the earliest Unix history, before the advent of
scripts. Since the invention of libraries, there are also binary files elsewhere.

Moved sbin/ to system-programs/.
The "root" super user in Syllable Server has already been renamed to "system". This is also
planned for Desktop. system-programs/ will then be a matching name for programs that need
to be executed by the super user.

Moved share/ to data/.
share/ originally meant files that can be shared over a network between multiple machines,
because they're data instead of architecture dependent binaries. This name is not very
meaningful on Syllable, because disk space is not an issue anymore for these files and we
build self-contained systems that can be operated off-line from a network. share/ directories
are symlinked to make them available as an aggregate within the system, but most resource
subdirectories are shared that way.
